[package]
name = "speedtime"
version = "0.1.0"
authors = ["Freya Vance <freylint@tuta.io>"]
edition = "2018"

[features]
default = ["default_transport_backends"]

default_transport_backends = ["tokio_transport_backends"]

# Tokio data transfer backend features
tokio_transport_backends = [
    "tokio_transport_backend_tcpipv4",
    "tokio_transport_backend_tcpipv6",
]
tokio_transport_backend_tcpipv4 = ["tokio"]
tokio_transport_backend_tcpipv6 = ["tokio"]


[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", optional = true }
tokio = { version = "1.3", features = ["full"], optional = true }
derive_more = "0.99"
log = "0.4"
